src/test/resources/purescript_examples/failing/Superclasses3.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('UnknownSuperclassTypeVar')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Implies)
          PsiElement(()('(')
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Foo')
            PsiElement(whitespace)(' ')
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeVar)
              PsiElement(identifier)('b')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
          PsiElement(operator)('<=')
          PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Bar')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)('\n')
